<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
				 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
		<modelVersion>4.0.0</modelVersion>

		<groupId>com.behsa</groupId>
		<artifactId>ganjex</artifactId>
		<packaging>jar</packaging>
		<version>0.1-SNAPSHOT</version>
		<properties>
				<junit.jupiter.version>5.0.3</junit.jupiter.version>
				<junit.platform.version>1.0.3</junit.platform.version>
		</properties>
		<dependencies>
				<dependency>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
						<version>1.2.3</version>
				</dependency>
				<dependency>
						<groupId>org.reflections</groupId>
						<artifactId>reflections</artifactId>
						<version>0.9.11</version>
				</dependency>
				<!--testing-->
				<dependency>
						<groupId>org.testng</groupId>
						<artifactId>testng</artifactId>
						<version>6.10</version>
						<scope>test</scope>
				</dependency>
				<!--<dependency>-->
						<!--<groupId>org.junit.jupiter</groupId>-->
						<!--<artifactId>junit-jupiter-api</artifactId>-->
						<!--<version>${junit.jupiter.version}</version>-->
						<!--<scope>test</scope>-->
				<!--</dependency>-->
				<dependency>
						<groupId>commons-io</groupId>
						<artifactId>commons-io</artifactId>
						<version>2.5</version>
						<scope>test</scope>
				</dependency>
				<dependency>
						<groupId>org.apache.commons</groupId>
						<artifactId>commons-exec</artifactId>
						<version>1.3</version>
						<scope>test</scope>
				</dependency>
		</dependencies>
		<build>
				<plugins>
						<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-compiler-plugin</artifactId>
								<version>3.7.0</version>
								<configuration>
										<source>1.9</source>
										<target>1.9</target>
								</configuration>
						</plugin>
				</plugins>
		</build>
</project>
